dark mode bug fix

--- a/main.css
+++ b/main.css
@@ -63,6 +63,6 @@
 }
 
 .border {
-    border: 5px solid var(--clr-border);
+    border: 5px solid var(--clr-border) !important;
 }
 
